# 3dof_leg_n2

./: README.md
leg_3dof/devel/: local_setup.sh
leg_3dof/devel/lib/pkgconfig/: day_21_08_2023_test_all.pc  leg_description.pc  leg_gazebo.pc  leg_rviz1.pc  test_all123.pc
leg_3dof/devel/share/day_21_08_2023_test_all/cmake/: day_21_08_2023_test_allConfig.cmake
leg_3dof/devel/share/leg_description/cmake/: leg_descriptionConfig.cmake
leg_3dof/devel/share/leg_gazebo/cmake/: leg_gazeboConfig.cmake
leg_3dof/devel/share/leg_rviz1/cmake/: leg_rviz1Config.cmake
leg_3dof/devel/share/test_all123/cmake/: test_all123Config.cmake
leg_3dof/src/demo/day_21_08_2023_test_all/: CMakeLists.txt
leg_3dof/src/demo/day_21_08_2023_test_all/launch/: display_goc_khop.launch  publish_and_subscribe.launch  service1_start_stop_data.launch  service2_trang_thai_cho_truoc.launch  tf2_world_base.launch
leg_3dof/src/demo/day_21_08_2023_test_all/src/publish_subscribe/: no1_publish_data_csv.py
leg_3dof/src/demo/day_21_08_2023_test_all/src/service/: no1_service_start_stop.py  no2_service_trang_thai_cho_truoc.py
leg_3dof/src/demo/day_21_08_2023_test_all/src/tf2/: no1_tf2_publish.py  no2_tf2_listener.py
leg_3dof/src/demo/leg_gazebo/: CMakeLists.txt
leg_3dof/src/demo/leg_gazebo/config/: leg_pid_control.yaml
leg_3dof/src/demo/leg_gazebo/launch/: test_csv.launch
leg_3dof/src/demo/leg_gazebo/scripts/: leg_read_csv.py
