cmake_minimum_required(VERSION 2.8.3)
project(leg_gazebo)


find_package(catkin REQUIRED)

catkin_package()

###########
## Build ##
###########

## Specify additional locations of header files
## Your package locations should be listed before other locations
include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)

